Remove redundant names from checkbox field options

--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -13,14 +13,14 @@
             <label class="title">
               Please tell us how you learned about NEXT. Be specific.
             </label>
-            <input class="field-element" name="how_you_discovered_next" placeholder="Your answer" />
+            <input class="field-element" name="Please tell us how you learned about NEXT. Be specific." placeholder="Your answer" />
           </div>
 
           <div class="form-item field text">
             <label class="title">
               Do you have any suggestions of other places that would be good to advertise or outreach to people who use drugs that can't access syringe exchange?
             </label>
-            <input class="field-element" name="outreach_recommendations" placeholder="Your answer" />
+            <input class="field-element" name="Do you have any suggestions of other places that would be good to advertise or outreach to people who use drugs that can't access syringe exchange?" placeholder="Your answer" />
           </div>
 
           <h3>To provide you an anonymous NYS Syringe Exchange Program ID card, we are required to gather some general information.</h3>
@@ -28,25 +28,25 @@
 
           <div class="form-item field text required">
             <label class="title">The First Letter of your Last Name</label>
-            <input class="field-element text" name="last_name_letter" />
+            <input class="field-element text" name="First Letter of your Last Name" />
           </div>
           <div class="form-item field text required">
             <label class="title">The First Letter of your First Name</label>
-            <input class="field-element text" name="first_name_letter" />
+            <input class="field-element text" name="First Letter of your First Name" />
           </div>
           <div class="form-item field text required">
             <label class="title">The First Initial of Your Mother's First Name</label>
-            <input class="field-element text" name="mother_first_name_letter" />
+            <input class="field-element text" name="First Initial of Your Mother's First Name" />
           </div>
 
           <div class="form-item field text required">
             <label class="title required">Date of Birth</label>
-            <input class="field-element text" name="dob" type="date">
+            <input class="field-element text" name="Date of Birth" type="date">
           </div>
 
           <div class="form-item field select required">
              <label class="title required">Gender</label>
-             <select id="gender" name="gender">
+             <select id="gender" name="Gender">
                <option value="">-- Select an Option --</option>
                <option value="Female - Identify as a Woman">Female - Identify as a Woman</option>
                <option value="Male - Identify as a Man">Male - Identify as a Man</option>
@@ -60,7 +60,7 @@
 
           <div class="form-item field select required">
              <label class="title required">(If female) I am pregnant</label>
-             <select id="pregnancy" name="pregnancy">
+             <select id="pregnancy" name="Preganancy">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -70,7 +70,7 @@
 
           <div class="form-item field select required">
              <label class="title required">My ethnicity could be described as</label>
-             <select id="ethnicity" name="ethnicity">
+             <select id="ethnicity" name="Ethnicity">
                <option value="">--Select--</option>
                <option value="Non-Hispanic">Non-Hispanic</option>
                <option value="Hispanic - Dominican">Hispanic - Dominican</option>
@@ -84,7 +84,7 @@
 
           <div class="form-item field select required">
              <label class="title required">My race could be described as</label>
-             <select id="ethnicity" name="race">
+             <select id="ethnicity" name="Race">
                <option value="">--Select--</option>
                <option value="African American/Black">African American/Black</option>
                <option value="Caucasian/ White">Caucasian/ White</option>
@@ -98,7 +98,7 @@
 
           <div class="form-item field select required">
              <label class="title required">What is your preferred language?</label>
-             <select id="language" name="language">
+             <select id="language" name="Preferred Language">
                <option value="">--Select--</option>
                <option value="English">English</option>
                <option value="Spanish">Spanish</option>
@@ -112,7 +112,7 @@
           
           <div class="form-item field select required">
              <label class="title required">Do you have health insurance?</label>
-             <select id="insurance" name="health_insurance">
+             <select id="insurance" name="Health Insurance">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -123,7 +123,7 @@
           <div class="form-item field select required">
              <label class="title required">Do you currently have a Primary Care Provider?
               That is, a doctor, nurse or physician assistant you see when it is not an emergency.</label>
-             <select id="primary_care_provider" name="primary_care_provider">
+             <select id="primary_care_provider" name="Primary Care Provider">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -135,61 +135,61 @@
             <label class="title">
               If you have been hospitalized within the past six months, how many times?
             </label>
-            <input class="field-element" name="number_times_hospitalized" placeholder="Your answer" />
+            <input class="field-element" name="Hospitalized" placeholder="Your answer" />
           </div>
 
           <div class="form-item field text">
             <label class="title">
               Have you had issues related to abscesses, cellulitis, endocarditis? Please explain.
             </label>
-            <input class="field-element" name="hospitalized_conditions" placeholder="Your answer" />
+            <input class="field-element" name="Have you had issues related to abscesses, cellulitis, endocarditis?" placeholder="Your answer" />
           </div>
 
           <div class="form-item field checkbox required">
             <label class="title">Have you been diagnosed with any of the following (check all that apply) 
             </label>
-            <fieldset id="medical_diagnoses">
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="diagnosed_hiv" value="HIV/AIDS" />
-                    HIV/AIDS
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="diagnosed_hepc" value="Hepatitis C" />
-                    Hepatitis C
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="diagnosed_diabetes" value="Diabetes" />
-                    Diabetes
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="diagnosed_mentalhealth" value="Mental Health Disorder (Bi-Polar Disorder, Depressive Disorder, Major Personality Disorder, Schizophrenia, etc)" />
-                    Mental Health Disorder (Bi-Polar Disorder, Depressive Disorder, Major Personality Disorder, Schizophrenia, etc)
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="diagnosed_cardiovascular" value="Cardiovascular Disease (Hypertension, Advanced Coronary Artery Disease, Peripheral Vascular Disease, etc)" />
-                    Cardiovascular Disease (Hypertension, Advanced Coronary Artery Disease, Peripheral Vascular Disease, etc)
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="diagnosed_respiratory" value="Respiratory Disease (Asthma, Chronic Obstructive Pulmonary Disease)" />
-                    Respiratory Disease (Asthma, Chronic Obstructive Pulmonary Disease)
-                  </label>
-                </div>
-                <div class="option">
-                    <label>
-                      <input type="checkbox" name="diagnosed_other" value="other"> Other <input class="field-element text" name="diagnosed_other">
-                    </label>
-                </div>
+            <fieldset id="Medical Diagnosis" name="Have you been diagnosed with any of the following (check all that apply)">
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="HIV/AIDS" />
+                  HIV/AIDS
+                </label>
+              </div>
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="Hepatitis C" />
+                  Hepatitis C
+                </label>
+              </div>
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="Diabetes" />
+                  Diabetes
+                </label>
+              </div>
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="Mental Health Disorder (Bi-Polar Disorder, Depressive Disorder, Major Personality Disorder, Schizophrenia, etc)" />
+                  Mental Health Disorder (Bi-Polar Disorder, Depressive Disorder, Major Personality Disorder, Schizophrenia, etc)
+                </label>
+              </div>
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="Cardiovascular Disease (Hypertension, Advanced Coronary Artery Disease, Peripheral Vascular Disease, etc)" />
+                  Cardiovascular Disease (Hypertension, Advanced Coronary Artery Disease, Peripheral Vascular Disease, etc)
+                </label>
+              </div>
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="Respiratory Disease (Asthma, Chronic Obstructive Pulmonary Disease)" />
+                  Respiratory Disease (Asthma, Chronic Obstructive Pulmonary Disease)
+                </label>
+              </div>
+              <div class="option">
+                <label>
+                  <input type="checkbox" value="other"> Other <input class="field-element text">
+                </label>
+              </div>
             </fieldset>
           </div>
 
@@ -197,12 +197,12 @@
             <label class="title">How would you describe your sexual orientation
               (some answers may include gay, straight, bisexual, queer, lesbian, etc)
             </label>
-            <input class="field-element" name="sexual_orientation" placeholder="Your answer" />
+            <input class="field-element" name="Sexual Orientation" placeholder="Your answer" />
           </div>
 
           <div class="form-item field select required">
              <label class="title required">I am a US veteran or in active duty</label>
-             <select id="military" name="military">
+             <select id="military" name="Militarus Status">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -211,7 +211,7 @@
 
           <div class="form-item field select required">
              <label class="title required">I am a parent, or parenting</label>
-             <select id="parent" name="parent">
+             <select id="parent" name="Parental Status">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -220,7 +220,7 @@
 
           <div class="form-item field select required">
              <label class="title required">What is your housing status?</label>
-             <select id="housing_status" name="housing_status">
+             <select id="housing_status" name="Housing Status">
                <option value="">--Select--</option>
                <option value="I rent or own my own home/apartment- Stable Situation">I rent or own my own home/apartment- Stable Situation</option>
                <option value="I rent or own my own home/apartment- Unstable Situation">I rent or own my own home/apartment- Unstable Situation</option>
@@ -233,7 +233,7 @@
 
           <div class="form-item field select required">
              <label class="title required">Have you been arrested or incarcerated in the past year?</label>
-             <select id="arrested_incarcerated" name="arrested_incarcerated">
+             <select id="arrested_incarcerated" name="Arrested or Incarcerated in Past Year">
                <option value="">--Select--</option>
                <option value="No">No</option>
                <option value="Yes, on probation">Yes, on probation</option>
@@ -249,7 +249,7 @@
           <div class="form-item field text">
             <label class="title">State</label>
             <div class="option">
-              <select name="state">
+              <select name="State">
                 <option value="">--Select State--</option>
                 <option value="AL">Alabama</option>
                 <option value="AK">Alaska</option>
@@ -307,7 +307,7 @@
 
           <div class="form-item field text">
             <label class="title">What's your zip code?</label>
-            <input class="field-element" name="zip" placeholder="Your answer" />
+            <input class="field-element" name="Zip" placeholder="Your answer" />
           </div>
 
           <h3>The next few questions are about drugs and drug use</h3>
@@ -315,88 +315,87 @@
 
           <div class="form-item field text">
             <label class="title">How old were you when you started injecting drugs?</label>
-            <input class="field-element" name="age_started_injecting" placeholder="Your answer" />
+            <input class="field-element" name="First Injection Age" placeholder="Your answer" />
           </div>
 
           <div class="form-item field checkbox required">
-            <!-- Probably worth doing not just for enrollment, but also an order -->
             <label class="title">What drugs have you used in the past 30 days?</label>
-            <fieldset id="drug_use">
+            <fieldset id="drug_use" name="What drugs have you used in the past 30 days?">
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_heroin" value="Heroin" />
+                    <input type="checkbox" value="Heroin" />
                     Heroin
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_cocaine" value="Cocaine" />
+                    <input type="checkbox" value="Cocaine" />
                     Cocaine
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_meth" value="Methamphetamine" />
+                    <input type="checkbox" value="Methamphetamine" />
                     Methamphetamine
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_crack" value="Crack-cocaine" />
+                    <input type="checkbox" value="Crack-cocaine" />
                     Crack-cocaine
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_pot" value="Marijuana" />
+                    <input type="checkbox" value="Marijuana" />
                     Marijuana
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_alcohol" value="Alcohol" />
+                    <input type="checkbox" value="Alcohol" />
                     Alcohol
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_methadone_unprescribed" value="Methadone prescribed" />
+                    <input type="checkbox" value="Methadone prescribed" />
                     Methadone (prescribed/from a doctor)
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_methadone_prescribed" value="Methadone not prescribed" />
+                    <input type="checkbox" value="Methadone not prescribed" />
                     Methadone (not prescribed)
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_buprenorphine_unprescribed" value="Buprenorphine prescribed" />
+                    <input type="checkbox" value="Buprenorphine prescribed" />
                     Buprenorphine (prescribed/from a doctor)
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_buprenorphine_prescribed" value="Buprenorphine not prescribed" />
+                    <input type="checkbox" value="Buprenorphine not prescribed" />
                     Buprenorphine (not prescribed)
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_opiates" value="Other opiates such as Oxycontin, Vicodin, Percocet" />
+                    <input type="checkbox" value="Other opiates such as Oxycontin, Vicodin, Percocet" />
                     Other opiates such as Oxycontin, Vicodin, Percocet, etc.
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_benzos" value="Benzos such as Valium, Ativan, Xanax" />
+                    <input type="checkbox" value="Benzos such as Valium, Ativan, Xanax" />
                     Benzos such as Valium, Ativan, Xanax
                   </label>
                 </div>
                 <div class="option">
                   <label>
-                    <input type="checkbox" name="drugs_last_30_k2" value="Synthetic marijuana/ K2" />
+                    <input type="checkbox" value="Synthetic marijuana/ K2" />
                     Synthetic marijuana/ K2
                   </label>
                 </div>
@@ -404,7 +403,7 @@
                   <label>
                     <input type="checkbox"/>
                     Other
-                    <input class="field-element text" name="drugs_last_30_other" />
+                    <input class="field-element text"/>
                   </label>
                 </div>
             </fieldset>
