make all field titles explicit so headers are readable in decrypted data.

--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -415,23 +415,23 @@
             </label>
             <div class="option">
               <label>
-                <input type="radio" name="inject_pills" value="no" /> No
+                <input type="radio" name="Do you inject pills?" value="no" /> No
               </label>
             </div>
             <div class="option">
               <label>
-                <input type="radio" name="inject_pills" value="yes often" /> Yes, often
+                <input type="radio" name="Do you inject pills?" value="yes often" /> Yes, often
               </label>
             </div>
             <div class="option">
               <label>
-                <input type="radio" name="inject_pills" value="yes rarely" /> Yes, rarely
+                <input type="radio" name="Do you inject pills?" value="yes rarely" /> Yes, rarely
               </label>
             </div>
             <div class="option">
               <label>
-                <input type="radio" name="inject_pills" value="Other" /> Other:
-                <input type="text" name="inject_pills_other" />
+                <input type="radio" name="Do you inject pills?" value="Other" /> Other:
+                <input type="text" name="Do you inject pills?" />
               </label>
             </div>
           </div>
