final form tweaks, explicit names on bottom of form

--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -430,7 +430,7 @@
             </div>
             <div class="option">
               <label>
-                <input type="radio" name="Do you inject pills?" value="Other" /> Other:
+                <input type="radio" value="Other" /> Other:
                 <input type="text" name="Do you inject pills?" />
               </label>
             </div>
@@ -441,7 +441,7 @@
 
           <div class="form-item field select required">
              <label class="title required">Have you overdosed in the past year?</label>
-             <select id="overdose_self" name="overdose_self">
+             <select id="overdose_self" name="Have you overdosed in the past year?">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -451,7 +451,7 @@
 
           <div class="form-item field select required">
              <label class="title required">Have you witnessed someone overdose in the past year?</label>
-             <select id="overdose_witness" name="overdose_witness">
+             <select id="overdose_witness" name="Have you witnessed someone overdose in the past year?">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -461,7 +461,7 @@
 
           <div class="form-item field select required">
              <label class="title required">If NEXT were able to give you naloxone for you to give out to people that you think should have it, would you be willing to distribute it?</label>
-             <select id="dist_naloxone" name="dist_naloxone">
+             <select id="dist_naloxone" name="Would you be willing to distribute naloxone?">
                <option value="">--Select--</option>
                <option value="Yes">Yes</option>
                <option value="No">No</option>
@@ -473,26 +473,26 @@
             <label class="title">
               If you answered yes to the last question, about how many people could you distribute naloxone to over a period of one month?
             </label>
-            <input class="field-element" name="next_distro_could" placeholder="Your answer" />
+            <input class="field-element" name="How many people could you distribute naloxone to over a period of one month?" placeholder="Your answer" />
           </div>
 
           <div class="form-item field text">
             <label class="title">
               Is there anything else you want us to know about you, your history, or situation?
             </label>
-            <input class="field-element" name="more_info" placeholder="Your answer" />
+            <input class="field-element" name="Other Information" placeholder="Your answer" />
           </div>
 
           <div class="form-item field text">
             <label class="title">
               Where do you currently obtain injection related supplies?
             </label>
-            <input class="field-element" name="more_info" placeholder="Your answer" />
+            <input class="field-element" name="Where do you currently obtain injection related supplies?" placeholder="Your answer" />
           </div>
 
           <div class="form-item field text">
             <label class="title">In addition to getting supplies for you, how many other people do you plan to get supplies from NEXT for?</label>
-                <select id="supplies_to_others" name="supplies_to_others">
+                <select id="supplies_to_others" name="How many other people do you plan to get supplies from NEXT for?">
                   <option value="">--Choose #--</option>
                   <option value="Just myself - no other people"> Just myself - no other people</option>
                   <option value="1 - 10 people"> 1 - 10 people</option>
@@ -507,7 +507,7 @@
             <label class="title">
               Please provide an anonymous user handle. Ensure the handle is one you'll remember. Please no spaces. Examples are: Panda223, JoeShmo, Liz_in_Lawrence
             </label>
-            <input class="field-element" name="handle" placeholder="Enter handle" />
+            <input class="field-element" name="Handle" placeholder="Enter handle" />
           </div>
 
           <p>Thank you for filling out this enrollment form. Text the handle you created above to 917-828-0293, email it to jamie@nextdistro.org, or message /u/nextdistro on Reddit. We'll respond about getting you supplies within 24 hours.</p>
